# ilk-compiler

./: LICENSE  error-expectation-test.lua  file-comparison-test.lua  ilk-compiler  ilk-compiler.lua  readme.md  run-all-tests.lua  run-main-test.lua  setup_env_lua_5.2.sh  test_clean.sh
backend/eigen/: CMakeLists.txt  core-types.h  ctransforms.cpp  ctransforms.h  gjac.h  ik.h  joint-transforms.cpp  joint-transforms.h  misc.h  operators.h  rots.h  test-utils.cpp  test-utils.h  test1.cpp
backend/ilknumpy/: __init__.py  backend.py  dataset.py  pyproject.toml
backend/julia/: ILKBackend.jl  NaiveDataset.jl
backend/octave/: LICENSE  compatibility.md
etc/: ilkcompiler-0.4.0-1.rockspec  ilkcompiler-0.4.1-1.rockspec  ilkcompiler-0.5.0-1.rockspec  lua-deps-1.0-1.rockspec
etc/example/: fk.ilk  robot-defs.h
ilk/: ansicolors.lua  common.lua  constants.lua  eigen.lua  gsl.lua  helpers.lua  ilk-eigen.lua  ilk-header-eigen.lua  ilk-makefile-eigen.lua  ilk-source-eigen.lua  ilk-test-eigen.lua  julia.lua  keywords.lua  langcommons.lua  langcommons_test.lua  numpy.lua  op-backend.lua  op-eigen.lua  op-gsl.lua  parser.lua  sanity-checks.lua  template-text.lua  utils.lua  vlog.lua
ilk/backend/: eigen.lua  julia.lua
ilk/eigen/: backend-symbols.lua  cmake.lua  common.lua  gen-metadata.lua  header.lua  ops.lua  source.lua  test-timings.lua  test.lua
ilk/julia/: backend-symbols.lua  common.lua  ops.lua  source.lua  test.lua
ilk/numpy/: backend-symbols.lua  common.lua  ops.lua  source.lua  test.lua
ilk/source-eigen/: cmake.lua  gen_fnc_body_close.lua  gen_fnc_body_computations.lua  gen_fnc_signature.lua  (+9 more)
lua/: ilk-compiler.lua
out_correct/: ur5.cpp  ur5.h  ur5_fk1_test.cpp  ur5_fk1_timing.cpp
tests/: error-expectation-test.lua  file-comparison-test.lua  run-all-tests.lua
(+172 files in other folders)
